--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
    
-<!-- Mirrored from stereoai.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 17 Feb 2023 23:20:31 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <title>StereoAI | AI Powered Music Studio</title>
+      <title>Core Punk</title>
       <meta name="robots" content="max-image-preview:large" />
       <meta name="description" content="AI Powered Music | Listen2Earn & Create2Earn | Stake STAI to enjoy our unlimited AI Music Studio. Presale live on 20.02.2023 13:00 UTC on Pinksale">
       <!-- Google tag (gtag.js) -->
