--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <title>Core Punk</title>
       <meta name="robots" content="max-image-preview:large" />
-      <meta name="description" content="AI Powered Music | Listen2Earn & Create2Earn | Stake STAI to enjoy our unlimited AI Music Studio. Presale live on 20.02.2023 13:00 UTC on Pinksale">
+      <meta name="description" content="Core NFT Marketplace">
       <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-KB3B9CCZM9"></script>
       <script>
@@ -110,7 +110,7 @@
          }
          .wp-block-joinchat-button .joinchat-button__qr {
          background-color: #fff;
-         border: 6px solid #25d366;
+         border: 6px solid #0c1a96;
          border-radius: 30px;
          box-sizing: content-box;
          display: block;
@@ -127,8 +127,8 @@
          }
          .wp-block-joinchat-button .joinchat-button__link {
          align-items: center;
-         background-color: #25d366;
-         border: 6px solid #25d366;
+         background-color: #0c1a96;
+         border: 6px solid #0c1a96;
          border-radius: 30px;
          display: inline-flex;
          flex-flow: row nowrap;
@@ -2019,7 +2019,7 @@
                         >
                         <div class="elementor-widget-container">
                            <h3 class="elementor-headline elementor-headline-animation-type-blinds elementor-headline-letters">
-                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">StereoAI is <br /></span>
+                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Core Punk<br /></span>
                               <span class="elementor-headline-dynamic-wrapper elementor-headline-text-wrapper">
                               <span class="elementor-headline-dynamic-text elementor-headline-text-active"> INNOVATION&nbsp; </span>
                               <span class="elementor-headline-dynamic-text"> REVOLUTION </span>
