--- a/index.html
+++ b/index.html
@@ -1786,7 +1786,7 @@
                                     <a href="index.html" aria-current="page" class="elementor-item elementor-item-active">Home</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2286">
-                                    <a href="#listen-to-earn" class="elementor-item elementor-item-anchor">Listen to earn</a>
+                                    <a href="#listen-to-earn" class="elementor-item elementor-item-anchor">Mint to Earn</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2288">
                                     <a href="#security" class="elementor-item elementor-item-anchor">Security</a>
@@ -1795,19 +1795,19 @@
                                     <a href="#faq" class="elementor-item">FAQ</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289">
-                                    <a href="https://stereoai.gitbook.io/" target="_blank" class="elementor-item">Docs</a>
+                                    <a href="#" target="_blank" class="elementor-item">Docs</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 idoMenu">
-                                    <a href="https://www.pinksale.finance/launchpad/0x1CB545155C825167Fa36eb1b798403a9523cfa55?chain=BSC" target="_blank" class="elementor-item">JOIN IDO</a>
+                                    <a href="#" target="_blank" class="elementor-item">Marketplace</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="https://t.me/StereoAICommunity" target="_blank">
+                                    <a href="#" target="_blank">
                                     <span class="elementor-screen-only">Telegram</span>
                                     <i class="fab fa-telegram"></i>
                                     </a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="https://twitter.com/StereoAIapp" target="_blank">
+                                    <a href="#" target="_blank">
                                     <span class="elementor-screen-only">Twitter</span>
                                     <i class="fab fa-twitter"></i>
                                     </a>
@@ -2037,7 +2037,7 @@
                      </div>
                      <div class="intro-buttons">
                         <div>
-                           <a href="https://www.pinksale.finance/launchpad/0x1CB545155C825167Fa36eb1b798403a9523cfa55?chain=BSC" target="_blank">
+                           <a href="#" target="_blank">
                            <button class="btnPresale">Join Presale</button>
                            </a>
                         </div>
@@ -2411,13 +2411,13 @@
                            </div>
                            <div class="elementor-element elementor-element-85d4045 elementor-widget elementor-widget-text-editor" data-id="85d4045" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container noMarginContainer">
-                                 <p>The StereoAI presale will start on:</p>
+                                 <p>Core punk Sale will start on:</p>
                                  <h4>February 20, 2023 at 13:00 (UTC). </h4>
                                  <p>Don't be late!</p>
                               </div>
                               <div class="btnHero">
-                                 <a href="https://www.pinksale.finance/launchpad/0x1CB545155C825167Fa36eb1b798403a9523cfa55?chain=BSC" target="_blank">
-                                 <button class="btnPresaleMid">Join Presale</button>
+                                 <a href="#" target="_blank">
+                                 <button class="btnPresaleMid">BUY CORE PUNK</button>
                                  </a>
                               </div>
                            </div>
