--- a/index.html
+++ b/index.html
@@ -2026,21 +2026,21 @@
                      </div>
                      <div class="elementor-element elementor-element-ec415fb elementor-widget elementor-widget-text-editor" data-id="ec415fb" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                           <p>Listen2Earn & Create2Earn powered by our</br> AI Music Studio</p>
+                           <p>Mint to Earn</br> Core NFT Token</p>
                         </div>
                      </div>
                      <div class="intro-buttons">
                         <div>
                            <a href="#" target="_blank">
-                           <button class="btnPresale">Join Presale</button>
+                           <button class="btnPresale">Buy Tokens</button>
                            </a>
                         </div>
                         <div>
-                           <a href="https://studio.stereoai.app/" target="_blank">
-                           <button class="btnDapp">Launch dApp</button>
+                           <a href="#" target="_blank">
+                           <button class="btnDapp">Launch Marketplace</button>
                            </a>
-                           <a href="https://t.me/stereoai_chat_bot" target="_blank">
-                           <button class="btnDapp">Lyrics Bot</button>
+                           <a href="#" target="_blank">
+                           <button class="btnDapp">Mint</button>
                            </a>
                         </div>
                      </div>
@@ -2070,13 +2070,12 @@
                         <div class="elementor-widget-container">
                            <h2 class="elementor-heading-title elementor-size-default custom-title">
                               BECOME A
-                              <span style="color: #00ff83;">
+                              <span style="color: #fea505;">
                               <br />
                               CREATOR:
                               </span>
                            </h2>
-                           <p>Describe the style, genres or emotions to generate your hit! The AI takes care of everything. From the base to the lyric. Leverage your creativity with our AI and get rewarded publishing your creations.</p>
-                           <p>Become a creator and gain acces to the unleashed power of the AI just staking or burning $STAI.</p>
+                           <p>Become a creator and gain acces to the unleashed power of the AI just staking or burning $CRP.</p>
                            <p>The more StereoAI user listen and likes your songs the more rewards you will get.</p>
                         </div>
                      </div>
