--- a/index.html
+++ b/index.html
@@ -2075,8 +2075,8 @@
                               CREATOR:
                               </span>
                            </h2>
-                           <p>Become a creator and gain acces to the unleashed power of the AI just staking or burning $CRP.</p>
-                           <p>The more StereoAI user listen and likes your songs the more rewards you will get.</p>
+                           <p>Become a creator and gain acces to the unleashed power of the NFT just staking or burning $CPT.</p>
+                           <p>The more Core punk users mint and likes your NFTs the more rewards you will get.</p>
                         </div>
                      </div>
                   </div>
@@ -2124,8 +2124,8 @@
                      <div class="elementor-element elementor-element-376bccf elementor-widget elementor-widget-heading" data-id="376bccf" data-element_type="widget" data-widget_type="heading.default">
                         <div class="elementor-widget-container">
                            <h2 class="elementor-heading-title elementor-size-default">
-                              LISTEN TO
-                              <span style="color: #00ff83;">
+                              MINT TO
+                              <span style="color: #fea505;">
                               <br />
                               EARN:
                               </span>
@@ -2134,16 +2134,16 @@
                      </div>
                      <div class="elementor-element elementor-element-b5e2892 elementor-widget elementor-widget-heading" data-id="b5e2892" data-element_type="widget" data-widget_type="heading.default">
                         <div class="elementor-widget-container">
-                           <h2 class="elementor-heading-title elementor-size-default">Do you<span style="color: #00ff83;"> love MUSIC and want to earn passive income?</span> </h2>
+                           <h2 class="elementor-heading-title elementor-size-default">Do you<span style="color: #fea505;"> love NFTs and want to earn passive income?</span> </h2>
                         </div>
                      </div>
                      <div class="elementor-element elementor-element-d369edf elementor-widget elementor-widget-text-editor" data-id="d369edf" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
                            <p>
-                              Just hold $STAI in your wallet and connect to our dapp. From there you can choose from thousands of creations of our users in our Studio. You can check how much you've accumulated and claim whenever you want.
+                              Just hold $CPT in your wallet and connect to our dapp. From there you can choose from thousands of creations of our users in our Market. You can check how much you've accumulated and claim whenever you want.
                            </p>
                            <p>
-                              The more $STAI you hold, the more profitable will be listening music for you. 
+                              The more $CPT you hold, the more profitable minting for you. 
                            </p>
                         </div>
                      </div>
@@ -2192,7 +2192,7 @@
                <div class="elementor-element elementor-element-a7dc3ba elementor-widget elementor-widget-heading" data-id="a7dc3ba" data-element_type="widget" data-widget_type="heading.default">
                   <div class="elementor-widget-container">
                      <h2 class="elementor-heading-title elementor-size-default">
-                        OUR<span style="color: #00ff83;"><b> TECHNOLOGY:</b> </span>
+                        OUR<span style="color: #fea505;"><b> TECHNOLOGY:</b> </span>
                      </h2>
                   </div>
                </div>
