--- a/index.html
+++ b/index.html
@@ -2212,13 +2212,12 @@
                         <div class="elementor-widget-wrap elementor-element-populated">
                            <div class="elementor-element elementor-element-b76741c elementor-widget elementor-widget-heading" data-id="b76741c" data-element_type="widget" data-widget_type="heading.default">
                               <div class="elementor-widget-container">
-                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffffff;">AI</span> ENGINE</h2>
+                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffffff;">MINTING</span> ENGINE</h2>
                               </div>
                            </div>
                            <div class="elementor-element elementor-element-ddaef09 elementor-widget elementor-widget-text-editor" data-id="ddaef09" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
-                                 <p>The first AI Music platform oriented to the mass public. This AI is trained  of cutting-edge Artificial Intelligences capable of generating the most advanced music content. And now is accessible to StereoAI users.</p>
-                                 <p>Our IA is build arround cutting-edge techlogies, and trained with millions of lyrics, songs, bases and chords. </p>
+                                 <p>The first Core NFT platform oriented to the mass public. Accessible to Core Blockchain Users .</p>
                               </div>
                            </div>
                         </div>
@@ -2327,12 +2326,12 @@
                               data-widget_type="heading.default"
                               >
                               <div class="elementor-widget-container">
-                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffffff;">MUSICAL</span> DAPP</h2>
+                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffffff;">DAPP</span> Marketplace</h2>
                               </div>
                            </div>
                            <div class="elementor-element elementor-element-ec11dd3 elementor-widget elementor-widget-text-editor" data-id="ec11dd3" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
-                                 <p>Our decentralized music app is an innovative system to access music while generating passive income. Unlike Spotify, Apple Music or Youtube, you don't pay to listen to music or are forced to watch annoying ads. On StereoAI you are compensated for bringing value to the platform while listening to music and valuing artists' creations</p>
+                                 <p>Our decentralized Marketplace is an innovative system to access NFTs while generating passive income.</p>
                               </div>
                            </div>
                         </div>
@@ -2397,8 +2396,8 @@
                            <div class="elementor-element elementor-element-64141e3 elementor-widget elementor-widget-heading" data-id="64141e3" data-element_type="widget" data-widget_type="heading.default">
                               <div class="elementor-widget-container">
                                  <h2 class="elementor-heading-title elementor-size-default">
-                                    <span style="color: #000;">Presale </span><br />
-                                    IDO
+                                    <span style="color: #000;">BUY</span><br />
+                                   $CPT
                                  </h2>
                               </div>
                            </div>
@@ -2439,8 +2438,8 @@
                            </div>
                            <div class="elementor-element elementor-element-ec11dd3 elementor-widget elementor-widget-text-editor" data-id="ec11dd3" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
-                                 <p>The tokenomics and architecture of the $STAI token is the core of the whole protocol. The token has a<span style="color: #00FF83;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
-                                 <h4 style="color: #00FF83;"> 0% Fees forever</br> Fixed Supply</br> No owner</h4>
+                                 <p>The tokenomics and architecture of the $CPT is the core of the whole protocol. The token has a<span style="color: #fea505;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
+                                 <h4 style="color: #fea505;"> 0% Fees forever</br> Fixed Supply</br> No owner</h4>
                               </div>
                            </div>
                         </div>
