--- a/index.html
+++ b/index.html
@@ -2409,7 +2409,7 @@
                               </div>
                               <div class="btnHero">
                                  <a href="#" target="_blank">
-                                 <button class="btnPresaleMid">BUY CORE PUNK</button>
+                                 <button class="btnPresaleMid">BUY CORE PUNK TOKEN</button>
                                  </a>
                               </div>
                            </div>
@@ -2522,19 +2522,19 @@
                         <div class="elementor-widget-wrap elementor-element-populated">
                            <div class="elementor-element elementor-element-39a54cb elementor-widget elementor-widget-heading" data-id="39a54cb" data-element_type="widget" data-widget_type="heading.default">
                               <div class="elementor-widget-container">
-                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffffff;">$STAI</span> TOKEN</h2>
+                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffffff;">$CPT</span> TOKEN</h2>
                               </div>
                            </div>
                            <div class="elementor-element elementor-element-3a6bfff elementor-widget elementor-widget-text-editor" data-id="3a6bfff" data-element_type="widget" data-widget_type="text-editor.default">
                               <p>
-                                 Our token has a <span style="color: #00FF83;">triple use case</span>
+                                 Our token has a <span style="color: #fea505;">triple use case</span>
                               </p>
                               <div class="elementor-widget-container">
                                  <ul class="custom-list">
-                                    <li><span style="color: #00FF83;">Access to the creators zone</span>. The token is necessary to stack it to access the area where the magic is made and where the songs are generated. Also you will earn if the users like your hits. 
+                                    <li><span style="color: #fea505;">Access to the creators zone</span>. The token is necessary to stack it to access the area where the magic is made and where the NFTs are generated. Also you will earn if the users like your Arts. 
                                     </li>
-                                    <li><span style="color: #00FF83;">Generate income</span> as a user: you can only generate passive income if you hold $STAI in your wallet. </li>
-                                    <li><span style="color: #00FF83;">Investment:</span> traders can speculate on the value of $STAI because with more users and creators in StereoAI platform, more value $STAI will accumulate. Plus, the token will be scarce over time thanks to the burning per use mechanics.</li>
+                                    <li><span style="color: #fea505;">Generate income</span> as a user: you can only generate passive income if you hold $CPT in your wallet. </li>
+                                    <li><span style="color: #fea505;">Investment:</span> traders can speculate on the value of $CPT because with more users and creators in our Marketplace platform, more value $CPT will accumulate. Plus, the token will be scarce over time thanks to the burning per use mechanics.</li>
                                  </ul>
                               </div>
                            </div>
@@ -2683,11 +2683,10 @@
                            </div>
                            <div class="elementor-element elementor-element-430f08d elementor-widget elementor-widget-text-editor" data-id="430f08d" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
-                                 <p>The scoring system and the users feedback fuels the AI and favors the evolution of the technology and data models.
-                                 <p>This allows the Stereo Platform to create synergies between the users and the AI, generating a win-win situation.</p>
+                                 <p>The scoring system and the users feedback fuels the Nfts and favors the evolution of the technology and data models.</p>
                               </div>
                               <div class="btnHero">
-                                 <a href="https://stereoai.gitbook.io/stereoai/tech-area/music-analysis-model" target="_blank">
+                                 <a href="#" target="_blank">
                                  <button class="btnPaper">Read our Whitepaper</button>
                                  </a>
                               </div>
@@ -3289,27 +3288,15 @@
                         <div class="elementor-widget-container">
                            <div class="elementor-social-icons-wrapper elementor-grid">
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="https://t.me/StereoAICommunity" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="#" target="_blank">
                               <span class="elementor-screen-only">Telegram</span>
                               <i class="fab fa-telegram"></i>
                               </a>
                               </span>
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="https://twitter.com/StereoAIapp" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="#" target="_blank">
                               <span class="elementor-screen-only">Twitter</span>
                               <i class="fab fa-twitter"></i>
-                              </a>
-                              </span>
-                              <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-repeater-item-377ab7a" href="https://www.youtube.com/watch?v=JDOotSKEP9o" target="_blank">
-                              <span class="elementor-screen-only">Youtube</span>
-                              <i class="fab fa-youtube"></i>
-                              </a>
-                              </span>
-                              <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-youtube elementor-repeater-item-377ab7a" href="https://github.com/stereowner" target="_blank">
-                              <span class="elementor-screen-only">Github</span>
-                              <i class="fab fa-github"></i>
                               </a>
                               </span>
                            </div>
