--- a/index.html
+++ b/index.html
@@ -3033,7 +3033,7 @@
                                                    decoding="async"
                                                    width="200"
                                                    height="200"
-                                                   src="assets/pinksaleBtn.png"
+                                                   src="assets/favicon.ico"
                                                    class="attachment-full size-full wp-image-1855"
                                                    alt=""
                                                    />
@@ -3044,7 +3044,7 @@
                                     <div>
                                        <div class="btnHero onlyPhone">
                                           <a href="" target="_blank">
-                                          <button class="btnPresale">Join Presale</button>
+                                          <button class="btnPresale">Join Launch</button>
                                           </a>
                                        </div>
                                     </div>
