--- a/index.html
+++ b/index.html
@@ -2433,7 +2433,7 @@
                         <div class="elementor-widget-wrap elementor-element-populated">
                            <div class="elementor-element elementor-element-f0f6454 elementor-widget elementor-widget-heading" data-id="f0f6454" data-element_type="widget" data-widget_type="heading.default">
                               <div class="elementor-widget-container">
-                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffffff;">STEREOAI</span><br /> TOKENOMICS</h2>
+                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffffff;">Core Punk</span><br /> TOKENOMICS</h2>
                               </div>
                            </div>
                            <div class="elementor-element elementor-element-ec11dd3 elementor-widget elementor-widget-text-editor" data-id="ec11dd3" data-element_type="widget" data-widget_type="text-editor.default">
@@ -2738,7 +2738,7 @@
                                           data-widget_type="image.default"
                                           >
                                           <div class="elementor-widget-container" style="will-change: transform; transform: scaleX(1.0546) scaleY(1.0546);">
-                                             <a href="https://pinksale.notion.site/StereoAI-KYC-Verification-2dfdd8cc024e4fd68c578a81b53558be" target="_blank">
+                                             <a href="#" target="_blank">
                                              <img
                                                 decoding="async"
                                                 width="130"
@@ -2754,7 +2754,7 @@
                                        <div class="elementor-element elementor-element-0b6448d elementor-widget elementor-widget-text-editor" data-id="0b6448d" data-element_type="widget" data-widget_type="text-editor.default">
                                           <div class="elementor-widget-container">
                                              <p>
-                                                <span style="color: #ffffff;"><a style="color: #ffffff;" href="https://pinksale.notion.site/StereoAI-KYC-Verification-2dfdd8cc024e4fd68c578a81b53558be" target="_blank" rel="noopener">KYC</a></span>
+                                                <span style="color: #ffffff;"><a style="color: #ffffff;" href="#" target="_blank" rel="noopener">KYC</a></span>
                                              </p>
                                           </div>
                                        </div>
@@ -2775,7 +2775,7 @@
                                           data-widget_type="image.default"
                                           >
                                           <div class="elementor-widget-container" style="will-change: transform; transform: scaleX(1.0546) scaleY(1.0546);">
-                                             <a href="https://github.com/cyberscope-io/audits/blob/main/stai/audit.pdf" target="_blank">
+                                             <a href="#" target="_blank">
                                              <img
                                                 decoding="async"
                                                 width="130"
@@ -2791,7 +2791,7 @@
                                        <div class="elementor-element elementor-element-0b6448d elementor-widget elementor-widget-text-editor" data-id="0b6448d" data-element_type="widget" data-widget_type="text-editor.default">
                                           <div class="elementor-widget-container">
                                              <p>
-                                                <span style="color: #ffffff;"><a style="color: #ffffff;" href="https://github.com/cyberscope-io/audits/blob/main/stai/audit.pdf" target="_blank" rel="noopener">AUDIT</a></span>
+                                                <span style="color: #ffffff;"><a style="color: #ffffff;" href="#" target="_blank" rel="noopener">AUDIT</a></span>
                                              </p>
                                           </div>
                                        </div>
@@ -2812,7 +2812,7 @@
                                           data-widget_type="image.default"
                                           >
                                           <div class="elementor-widget-container" style="will-change: transform; transform: scaleX(1.13746) scaleY(1.13746);">
-                                             <a href="https://www.pinksale.finance/pinklock/detail/0xeBc148d40313Be9C9F214d3BEB9F2ddEbeC0Ec52?chain=BSC" target="_blank">
+                                             <a href="" target="_blank">
                                              <img
                                                 decoding="async"
                                                 width="138"
@@ -2828,7 +2828,7 @@
                                        <div class="elementor-element elementor-element-910e8f0 elementor-widget elementor-widget-text-editor" data-id="910e8f0" data-element_type="widget" data-widget_type="text-editor.default">
                                           <div class="elementor-widget-container">
                                              <p>
-                                                <a href="https://www.pinksale.finance/pinklock/detail/0xeBc148d40313Be9C9F214d3BEB9F2ddEbeC0Ec52?chain=BSC" target="_blank" rel="noopener">
+                                                <a href="" target="_blank" rel="noopener">
                                                 <span style="color: #ffffff;">LOCKED</span>
                                                 </a>
                                              </p>
@@ -2851,7 +2851,7 @@
                                           data-widget_type="image.default"
                                           >
                                           <div class="elementor-widget-container" style="will-change: transform; transform: scaleX(1.13746) scaleY(1.13746);">
-                                             <a href="https://www.youtube.com/watch?v=NgB3f763euI">
+                                             <a href="#">
                                              <img
                                                 decoding="async"
                                                 width="98"
