--- a/index.html
+++ b/index.html
@@ -2020,7 +2020,7 @@
                               <span class="elementor-headline-dynamic-text"> IMPROVEMENT<br /> </span>
                               </span>
                               <br />
-                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">of Music, AI, and Blockchain</span>
+                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Core's First Nft Token</span>
                            </h3>
                         </div>
                      </div>
@@ -2505,7 +2505,7 @@
                                     decoding="async"
                                     width="768"
                                     height="761"
-                                    src="assets/Play-1.png"
+                                    src="assets/logo.png"
                                     class="attachment-full size-full wp-image-2013"
                                     alt=""
                                     />
