--- a/index.html
+++ b/index.html
@@ -2383,7 +2383,7 @@
                                     decoding="async"
                                     width="370"
                                     height="370"
-                                    src="assets/Branca-1024x224-1.png"
+                                    src="assets/logo.png"
                                     class="attachment-full size-full wp-image-2118"
                                     alt=""
                                     />
