--- a/index.html
+++ b/index.html
@@ -2362,7 +2362,7 @@
                                     decoding="async"
                                     width="254"
                                     height="510"
-                                    src="assets/logo,png"
+                                    src="assets/logo.png"
                                     class="attachment-full size-full wp-image-2196 phoneImg"
                                     alt=""
                                     />
