--- a/index.html
+++ b/index.html
@@ -2439,7 +2439,15 @@
                            <div class="elementor-element elementor-element-ec11dd3 elementor-widget elementor-widget-text-editor" data-id="ec11dd3" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
                                  <p>The tokenomics and architecture of the $CPT is the core of the whole protocol. The token has a<span style="color: #fea505;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
-                                 <h4 style="color: #fea505;"> 0% Fees forever</br> Fixed Supply</br> No owner</h4>
+                                 <h4 style="color: #fea505;">Name: Core Punk</br> 
+                                                               Total Supply: 50,000,000</br> 
+                                                               Public Sale: 90% </br> 
+                                                               Stake2earn: 5%</br> 
+                                                               Mint2earn: 4%</br> 
+                                                               Investor Airdrop: 1%</br> </br> 
+                                                               Tax</br> 
+                                                               Buy tax: 3%</br> 
+                                                               Sell tax: 5%</h4>
                               </div>
                            </div>
                         </div>
