--- a/index.html
+++ b/index.html
@@ -1795,13 +1795,13 @@
                                     <a href="#" target="_blank" class="elementor-item">Marketplace</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="#" target="_blank">
+                                    <a href="https://t.me/corepunknft" target="_blank">
                                     <span class="elementor-screen-only">Telegram</span>
                                     <i class="fab fa-telegram"></i>
                                     </a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="#" target="_blank">
+                                    <a href="https://twitter.com/CorePunk3" target="_blank">
                                     <span class="elementor-screen-only">Twitter</span>
                                     <i class="fab fa-twitter"></i>
                                     </a>
@@ -3166,13 +3166,13 @@
                         <div class="elementor-widget-container">
                            <div class="elementor-social-icons-wrapper elementor-grid">
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="#" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="https://t.me/corepunknft" target="_blank">
                               <span class="elementor-screen-only">Telegram</span>
                               <i class="fab fa-telegram"></i>
                               </a>
                               </span>
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="#" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="https://twitter.com/CorePunk3" target="_blank">
                               <span class="elementor-screen-only">Twitter</span>
                               <i class="fab fa-twitter"></i>
                               </a>
@@ -3182,20 +3182,7 @@
                      </div>
                   </div>
                </div>
-               <div class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-82f758f" data-id="82f758f" data-element_type="column">
-                  <div class="elementor-widget-wrap elementor-element-populated">
-                     <div class="elementor-element elementor-element-efa924e elementor-widget elementor-widget-heading" data-id="efa924e" data-element_type="widget" data-widget_type="heading.default">
-                        <div class="elementor-widget-container">
-                           <h2 class="elementor-heading-title elementor-size-default"><a href="https://stereoai.gitbook.io/stereoai/legal-area/intellectual-property" target="_blank">Intellectual Property </a></h2>
-                        </div>
-                     </div>
-                     <div class="elementor-element elementor-element-2870308 elementor-widget elementor-widget-heading" data-id="2870308" data-element_type="widget" data-widget_type="heading.default">
-                        <div class="elementor-widget-container">
-                           <h2 class="elementor-heading-title elementor-size-default"><a href="https://stereoai.gitbook.io/stereoai/legal-area/copyright-policy" target="_blank">Copyright Policy </a></h2>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+              
             </div>
          </section>
       </div>
