--- a/index.html
+++ b/index.html
@@ -3051,7 +3051,7 @@
                                     </div>
                                     <div>
                                        <div class="btnHero onlyPhone">
-                                          <a href="" target="_blank">
+                                          <a href="https://t.me/corepunknft" target="_blank">
                                           <button class="btnPresale">Join Launch</button>
                                           </a>
                                        </div>
