--- a/index.html
+++ b/index.html
@@ -2031,7 +2031,7 @@
                      </div>
                      <div class="intro-buttons">
                         <div>
-                           <a href="#" target="_blank">
+                           <a href="https://t.me/corepunknft" target="_blank">
                            <button class="btnPresale">Buy Tokens</button>
                            </a>
                         </div>
@@ -2404,11 +2404,11 @@
                            <div class="elementor-element elementor-element-85d4045 elementor-widget elementor-widget-text-editor" data-id="85d4045" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container noMarginContainer">
                                  <p>Core punk Sale will start on:</p>
-                                 <h4>February 20, 2023 at 13:00 (UTC). </h4>
+                                 <h4>February 24th, 2023 at 18:00 (UTC). </h4>
                                  <p>Don't be late!</p>
                               </div>
                               <div class="btnHero">
-                                 <a href="#" target="_blank">
+                                 <a href="https://t.me/corepunknft" target="_blank">
                                  <button class="btnPresaleMid">BUY CORE PUNK TOKEN</button>
                                  </a>
                               </div>
