--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <title>Core Punk</title>
+      <title>Conflux Punk</title>
       <meta name="robots" content="max-image-preview:large" />
       <meta name="description" content="Core NFT Marketplace">
       <!-- Google tag (gtag.js) -->
@@ -2013,7 +2013,7 @@
                         >
                         <div class="elementor-widget-container">
                            <h3 class="elementor-headline elementor-headline-animation-type-blinds elementor-headline-letters">
-                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Core Punk<br /></span>
+                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Conflux Punk<br /></span>
                               <span class="elementor-headline-dynamic-wrapper elementor-headline-text-wrapper">
                               <span class="elementor-headline-dynamic-text elementor-headline-text-active"> INNOVATION&nbsp; </span>
                               <span class="elementor-headline-dynamic-text"> REVOLUTION </span>
@@ -2031,7 +2031,7 @@
                      </div>
                      <div class="intro-buttons">
                         <div>
-                           <a href="https://t.me/corepunknft" target="_blank">
+                           <a href="#" target="_blank">
                            <button class="btnPresale">Buy Tokens</button>
                            </a>
                         </div>
@@ -2076,7 +2076,7 @@
                               </span>
                            </h2>
                            <p>Become a creator and gain acces to the unleashed power of the NFT just staking or burning $CPT.</p>
-                           <p>The more Core punk users mint and likes your NFTs the more rewards you will get.</p>
+                           <p>The more Conflux Punk users mint and likes your NFTs the more rewards you will get.</p>
                         </div>
                      </div>
                   </div>
@@ -2403,13 +2403,13 @@
                            </div>
                            <div class="elementor-element elementor-element-85d4045 elementor-widget elementor-widget-text-editor" data-id="85d4045" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container noMarginContainer">
-                                 <p>Core punk Sale will start on:</p>
+                                 <p>Conflux Punk Sale will start on:</p>
                                  <h4>February 24th, 2023 at 18:00 (UTC). </h4>
                                  <p>Don't be late!</p>
                               </div>
                               <div class="btnHero">
-                                 <a href="https://t.me/corepunknft" target="_blank">
-                                 <button class="btnPresaleMid">BUY CORE PUNK TOKEN</button>
+                                 <a href="#" target="_blank">
+                                 <button class="btnPresaleMid">BUY Conflux Punk TOKEN</button>
                                  </a>
                               </div>
                            </div>
@@ -2439,7 +2439,7 @@
                            <div class="elementor-element elementor-element-ec11dd3 elementor-widget elementor-widget-text-editor" data-id="ec11dd3" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
                                  <p>The tokenomics and architecture of the $CPT is the core of the whole protocol. The token has a<span style="color: #fea505;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
-                                 <h4 style="color: #fea505;">Name: Core Punk</br> 
+                                 <h4 style="color: #fea505;">Name: Conflux Punk</br> 
                                                                Total Supply: 50,000,000</br> 
                                                                Public Sale: 90% </br> 
                                                                Stake2earn: 5%</br> 
@@ -2972,7 +2972,7 @@
                                   </div>
                                   <div class="elementor-element elementor-element-85d4045 elementor-widget elementor-widget-text-editor" data-id="85d4045" data-element_type="widget" data-widget_type="text-editor.default">
                                       <div class="elementor-widget-container">
-                                          <p>The StereoAI presale will be on February 15, 2023 at 12:00. Don't be late!</p>
+                                          
                                       </div>
                                   </div>
                               </div>
@@ -3051,7 +3051,7 @@
                                     </div>
                                     <div>
                                        <div class="btnHero onlyPhone">
-                                          <a href="https://t.me/corepunknft" target="_blank">
+                                          <a href="#" target="_blank">
                                           <button class="btnPresale">Join Launch</button>
                                           </a>
                                        </div>
