--- a/index.html
+++ b/index.html
@@ -3150,7 +3150,7 @@
                   <div class="elementor-widget-wrap elementor-element-populated">
                      <div class="elementor-element elementor-element-5b4a3ea elementor-widget elementor-widget-text-editor" data-id="5b4a3ea" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                           <p>All rigths reserverd® Core Punk</p>
+                           <p>All rigths reserverd® Conflux Punk</p>
                         </div>
                      </div>
                   </div>
@@ -3166,13 +3166,13 @@
                         <div class="elementor-widget-container">
                            <div class="elementor-social-icons-wrapper elementor-grid">
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="https://t.me/corepunknft" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="" target="_blank">
                               <span class="elementor-screen-only">Telegram</span>
                               <i class="fab fa-telegram"></i>
                               </a>
                               </span>
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="https://twitter.com/CorePunk3" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="" target="_blank">
                               <span class="elementor-screen-only">Twitter</span>
                               <i class="fab fa-twitter"></i>
                               </a>
